loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:5: error: illegal start of simple expression
	}
        ^